SERP page added ,yahoo logic implemented

--- a/ad_serving/app/pkg/static/ad.html
+++ b/ad_serving/app/pkg/static/ad.html
@@ -4,7 +4,7 @@
 
       <div id="keyword-0" class="feed-item" style="padding: 10px 0; border-bottom: 1px solid #e0e0e0; margin-bottom:30px;">
       <h3 style="margin: 6px 0;">
-        <a href="https://en.wikipedia.org/wiki/{{index .Keywords 0}}" target="_blank"
+        <a href="http://localhost:8080/server/serp.html?keywords={{index .Keywords 0}}" target="_blank"
            style="text-decoration: none; color:red; font-size: 20px; font-weight: 600;">
           {{index .Keywords 0}}
         </a>
@@ -13,7 +13,7 @@
 
     <div id="keyword-1" class="feed-item" style="padding: 10px 0; border-bottom: 1px solid #e0e0e0; margin-bottom:30px;">
       <h3 style="margin: 6px 0;">
-        <a href="https://en.wikipedia.org/wiki/{{index .Keywords 1}}" target="_blank"
+        <a href="http://localhost:8080/server/serp.html?keywords={{index .Keywords 1}}" target="_blank"
            style="text-decoration: none; color:red; font-size: 20px; font-weight: 600;">
           {{index .Keywords 1}}
         </a>
@@ -22,7 +22,7 @@
 
     <div id="keyword-2" class="feed-item" style="padding: 10px 0; border-bottom: 1px solid #e0e0e0; margin-bottom:30px;">
       <h3 style="margin: 6px 0;">
-        <a href="https://en.wikipedia.org/wiki/{{index .Keywords 2}}" target="_blank"
+        <a href="http://localhost:8080/server/serp.html?keywords={{index .Keywords 2}}" target="_blank"
            style="text-decoration: none; color:red; font-size: 20px; font-weight: 600;">
           {{index .Keywords 2}}
         </a>
